Adding Product entity with list/show pages and fixtures

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -71,3 +71,8 @@ fos_user:
     db_driver: orm
     firewall_name: main
     user_class: AppBundle\Entity\User
+
+stof_doctrine_extensions:
+    orm:
+        default:
+            sluggable: true
