really big commit
Most pages still in progress…

pricing page done!

--- a/composer.json
+++ b/composer.json
@@ -65,5 +65,8 @@
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
         }
+    },
+    "platform": {
+        "php": "5.6"
     }
 }
