--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -18,6 +18,8 @@ security:
                 csrf_token_generator: security.csrf.token_manager
             logout:       true
             anonymous:    true
+            remember_me:
+                secret: '%secret%'
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
