Not using emails that are totally different than the username - it's confusing

--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -1,7 +1,7 @@
 AppBundle\Entity\User:
     user_{1..10}:
         username: sleek_sheep<current()>
-        email: <email()>
+        email: sleek_sheep<email()>@example.com
         plainPassword: breakingbaad
         enabled: true
 
