--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -1,7 +1,7 @@
 AppBundle\Entity\User:
     user_{1..10}:
         username: sleek_sheep<current()>
-        email: sleek_sheep<email()>@example.com
+        email: sleek_sheep<current()>@example.com
         plainPassword: breakingbaad
         enabled: true
 
