breaking the tutorial into 2 parts

--- a/knpu/ep1-charging/metadata.yml
+++ b/knpu/ep1-charging/metadata.yml
@@ -4,19 +4,18 @@ summary: |
     You've already got the unstoppably amazing product, you
     *just* need to get out there and sell it! Knowing that almost
     every payment-processor ever is a *huge* pain you choose
-    Stripe (so wise).
+    Stripe (you're so wise).
 
     In this tutorial, we'll build a full checkout system for our
     awesome product and learn all about:
 
-    - Handling the Stripe.js checkout process
-    - Creating Stripe customers
-    - Storing cards type and last-4
-    - Creating and charging subscriptions!
-    - Handling monthly charges (via webhooks)
-    - What happens when charging fails :(
-    - Updating credit card details
-    - Using discounts and coupon Codes
+    - Handling the Stripe.js checkout & token process
+    - Associating cards and creating Charge objects
+    - Creating Stripe customers and connecting them with users
+    - Building an embedded *and* a completely customer checkout form
+    - Formatting your card & expiration fields like a pro
+    - Being *super* graceful when things go wrong
+    - Organizing everything with Stripe invoices
 
 illustration: stripe.png
 
