adding updated image ep 2

--- a/knpu/ep2-subscriptions/metadata.yml
+++ b/knpu/ep2-subscriptions/metadata.yml
@@ -20,7 +20,7 @@ summary: |
     Oh, the possibilities are endless: create a subscription service that treats
     your customers right.
 
-illustration: stripe.png
+illustration: stripe2.png
 
 tuts_hero:
     # todo - fill these inn
