updating Meta Data
chapters 1 - 4

--- a/knpu/ep1-charging/metadata.yml
+++ b/knpu/ep1-charging/metadata.yml
@@ -28,17 +28,13 @@ tuts_hero:
 
 chapters:
     stripe-dashboard:
-        is_finished: false
-        video_key: ~
+        video_key: 178034979
     checkout-form:
-        is_finished: false
-        video_key: ~
+        video_key: 178037785
     charge-it:
-        is_finished: false
-        video_key: ~
+        video_key: 178038044
     hide-private-keys:
-        is_finished: false
-        video_key: ~
+        video_key: 178037613
     stripe-customer-user-table:
         is_finished: false
         video_key: ~
@@ -65,4 +61,4 @@ chapters:
         video_key: ~
     pro-error-handling:
         is_finished: false
-        video_key: ~        
+        video_key: ~
