--- a/knpu/ep1-charging/metadata.yml
+++ b/knpu/ep1-charging/metadata.yml
@@ -42,8 +42,7 @@ chapters:
     stripe-invoices:
         video_key: 178045797
     centralize-stripe-code:
-        is_finished: false
-        video_key: ~
+        video_key: 178537309
     force-https-please:
         video_key: 178504992
     custom-checkout-form:
@@ -53,5 +52,4 @@ chapters:
     pretty-card-formatting:
         video_key: 178505935
     pro-error-handling:
-        is_finished: false
-        video_key: ~
+        video_key: 178538187
