[Part 2] Starting proofread!

--- a/knpu/ep2-subscriptions/metadata.yml
+++ b/knpu/ep2-subscriptions/metadata.yml
@@ -32,6 +32,9 @@ chapters:
     creating-plans:
         is_finished: false
         video_key: ~
+    add-plan-to-cart:
+        is_finished: false
+        video_key: ~
     make-the-subcription:
         is_finished: false
         video_key: ~
