[Part 2] More proofreading

--- a/knpu/ep2-subscriptions/metadata.yml
+++ b/knpu/ep2-subscriptions/metadata.yml
@@ -79,6 +79,9 @@ chapters:
     testing-webhooks-fake-event:
         is_finished: false
         video_key: ~
+    live-webhook-testing-ngrok:
+        is_finished: false
+        video_key: ~
     subscription-renewal-webhook:
         is_finished: false
         video_key: ~
