fixing bad YAML

--- a/knpu/ep2-subscriptions/metadata.yml
+++ b/knpu/ep2-subscriptions/metadata.yml
@@ -1,4 +1,4 @@
-title: Stripe Level 2: Subscriptions, Discounts, Webhooks, oh my!
+title: 'Stripe Level 2: Subscriptions, Discounts, Webhooks, oh my!'
 
 summary: |
     After [Part 1](http://knpuniversity.com/screencast/stripe) of the tutorial,
