Wrap string in Yaml which contains a colon with quotes

--- a/knpu/ep1-charging/metadata.yml
+++ b/knpu/ep1-charging/metadata.yml
@@ -1,4 +1,4 @@
-title: Stripe: Killer Payment Processing + ??? = Profit
+title: 'Stripe: Killer Payment Processing + ??? = Profit'
 
 summary: |
     You've already got the unstoppably amazing product, you
