Set platform PHP to 7.1.3

--- a/composer.json
+++ b/composer.json
@@ -69,7 +69,9 @@
             "keep-outdated": true
         }
     },
-    "platform": {
-        "php": "5.6"
+    "config": {
+        "platform": {
+            "php": "7.1.3"
+        }
     }
 }
